SessionManager: Use volatile _activeSession reference
It gets accessed by multiple threads, including the EDT.  Use
thread-safe (memory-safe) collections tracking open sessions,
as well.